[package]
name = "kaidoku"
version = "0.1.0"
edition = "2021"
authors = ["jeff <zhang.jeffreyd@gmail.com>"]
description = "Unaudited crypto protocols intended for educational and experimental use cases"
license = "MIT"
license-file = "LICENSE.md"
repository = "https://github.com/jeffzh4ng/kaidoku"
keywords = ["cryptography"]
categories = ["cryptography", "command-line-utilities"]

[features]
default = ["insecure"]
insecure = []

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.11", features = ["derive"] }
generic-array = "0.14.7"
log = "0.4.19"
rand = "0.8.5"
thiserror = "1.0.44"

[build-dependencies]
bindgen = "0.66.1"
pkg-config = "0.3.27"
